@@ -2,6 +2,7 @@ ChangeLog for pommed
 --------------------
 
 version 1.35:
+	- pommed: fix crash if no fnmode sysfs node found.
 
 version 1.34:
 	- pommed: be more careful when invoking eject (Alioth #312213).
